--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.5",
+    "prettier": "2.1.2"
   }
+
+  
 }
+
+
